--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,46 +1,4 @@
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  /* padding: 2rem; */
-  text-align: center;
-}
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 
 .navbar .Navlogo{
   width: auto;
@@ -54,5 +12,50 @@
   color: var(--Blackish);
   background: transparent;
 
+}
+
+
+
+.heading{
+  font-size: 40px;
+  color: var(--Blackish);
+  margin-bottom: 1rem;
+
+  font-family: Poppins;
+  font-style: normal;
+  text-align: center;
+  text-transform: none;
+}
+
+.spanColor{
+  font-size: 48px;
+  font-weight: 700;
+  color: var(--Blackish);
+  margin-bottom: 1rem;
+
+  font-style: normal;
+  text-align: center;
+  text-transform: none;
+}
+
+.subHeading{
+  font-size: 28px;
+  font-family: poppins; 
+  color: var(--Blackish);
+  font-style: normal;
+  text-align: center;
+  text-transform: none;
+}
+
+.normalText{
+  font-size: 1rem;
+  font-weight: 300;
+  color: var(--Blackish);
+  margin-bottom: 1rem;
+  text-transform: none;
+}
+.container{
+  width: 80%;
+  align-self: center;
 }
 
