--- a/Frontend/src/components/HomeNavbar/HomeNavbar.css
+++ b/Frontend/src/components/HomeNavbar/HomeNavbar.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: var(--color-primary);
     /* background: var(--color-blackish); */
     /* background: transparent; */
     /* box-shadow: 10px 1px 3px rgba(68, 68, 68, 0.884); */
@@ -55,16 +56,12 @@
     z-index: 1000;
     width: max-content;
     height: 50px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-    justify-content: center;
     cursor: pointer;
+    
 
   }
 
-  .navbar .logo .bigE{
+  /* .navbar .logo .bigE{
     height: max-content;
     padding: 2px 6px;
     font-size: 30px;
@@ -102,7 +99,7 @@
     font-weight: normal;
     color: #fff;
   }
-
+ */
 
   
   
