--- a/Frontend/src/components/Footer/Footer.css
+++ b/Frontend/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 
 .footer{
     width: 100%;
-    height: 100%;
-    padding: 3rem 20px 30px;
+    height: max-content;
+    padding: 1rem 20px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,27 +17,26 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;    
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
     gap: 1.5rem;
     margin-bottom: 10px;
 }
 
 .footer .navTab .footerAbout{
     /* width: 25%; */
-    flex: 1 1 300px;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;    
+    justify-content: center;
+    align-items: center;    
     padding-right: 1rem;
     gap: 10px;
 }
 .footer .navTab .footerAbout .footerLogo{
-    width: auto;
-    height: 100%;
+    width: max-content;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,14 +49,16 @@
 }
 
 .footer .navTab .footerAbout .para{
+    width: 60%;
     color : #ececec;
+    text-align: center;
 }
 
 .footer .navTab  .footerAbout .footerSocial{
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;    
     gap: 10px;
     font-size: 20px;
