--- a/Frontend/src/pages/Chat/Chat.css
+++ b/Frontend/src/pages/Chat/Chat.css
@@ -71,6 +71,9 @@
   border-radius: 15px;
   background: var(--color-gray);
 }
+.msg-bubble_display{
+  display: none;
+} 
 .msg-info {
   display: flex;
   justify-content: space-between;
